src/tests/errors/lexing/test05.cmp
program main 
begin  
    var x := 4.  (* illegal float literal *)
end 